--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,6 +1,5 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
@@ -30,16 +29,25 @@ dist.jar=${dist.dir}/Jardin enfant.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.core-3.3.0.jar=C:\\Users\\Dorra Kerrou\\Downloads\\core-3.3.0.jar
+file.reference.gson-2.8.2.jar=C:\\Users\\Dorra Kerrou\\Desktop\\3A26\\semestre 2\\PIDEV\\SPRINT JAVA\\jar_files(1)\\gson-2.8.2.jar
+file.reference.javase-3.3.0.jar=C:\\Users\\Dorra Kerrou\\Downloads\\javase-3.3.0.jar
+file.reference.WeatherLibrary.jar=C:\\Users\\Dorra Kerrou\\Desktop\\3A26\\semestre 2\\PIDEV\\SPRINT JAVA\\WeatherLibrary\\WeatherLibrary.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.core-3.3.0.jar}:\
+    ${file.reference.javase-3.3.0.jar}:\
+    ${file.reference.WeatherLibrary.jar}:\
+    ${file.reference.gson-2.8.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.external.vm=false
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.8
@@ -101,6 +109,7 @@ manifest.custom.codebase=*
 manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
+mkdist.disabled=false
 platform.active=default_platform
 run.classpath=\
     ${dist.jar}:\
