--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,6 +30,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.Bulk_SMS_Library.jar=C:\\Users\\FERID\\Desktop\\Bulk_SMS_Library.jar
+file.reference.itext-1.4.8.jar=C:\\Users\\FERID\\Desktop\\itext-1.4.8.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
@@ -37,7 +38,8 @@ jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
     ${libs.MySQLDriver.classpath}:\
-    ${file.reference.Bulk_SMS_Library.jar}
+    ${file.reference.Bulk_SMS_Library.jar}:\
+    ${file.reference.itext-1.4.8.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
